# haskell-template-direnv

./: .gitignore  README.md  cabal.project  flake.nix
haskell-template-direnv/: haskell-template-direnv.cabal
